--- a/fish-blog.html
+++ b/fish-blog.html
@@ -8,27 +8,37 @@
     <h1>Everything about fish</h1>
 
     <p>Here is everything you need to know about fish. First, the important stuff:</p>
-    <div class="important">
+
+    <div class="about">
+      <h3 style="font-style:normal;">About Me</h3>
+
+      <p>I'm an avid fisherman with years of experience in the water. Lorem ipsum dolor amet polaroid coloring book cray plaid XOXO tbh. Meh lyft +1 shoreditch tbh tumblr hashtag vaporware viral hammock fixie. Hoodie semiotics chia cray quinoa synth twee kale chips iPhone occupy, 90's chambray cardigan selfies. Waistcoat kitsch flannel banjo vice tofu biodiesel hashtag try-hard chambray fashion axe leggings. Chicharrones health goth beard readymade prism flexitarian biodiesel pour-over.</p>
+    </div>
+
+    <div class="img">
+      <img src="img/fish.png" height="50%" width="50%">
+      <p>Here are some types of fish:</p>
+      <ul>
+        <li>Goldfish</li>
+        <li>Catfish</li>
+        <li>And lots, lots more!</li>
+      </uL>
+    </div>
+
+    <div class="important column">
       <h2>Types of fish</h2>
 
       <p>There are many types of fish. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+      <h2>Other important stuff</h2>
+
+      <p>Here is some other really important stuff about fish. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
     </div>
 
-    <p>Here are some types of fish:</p>
 
-    <ul>
-      <li>Goldfish</li>
-      <li>Catfish</li>
-      <li>And lots, lots more!</li>
-    </uL>
-    <div class="important">
-    <h2>Other important stuff</h2>
+    <div class="unimportant column">
+      <p style="color:#000;">Now, for some less important stuff about fish.</p>
 
-    <p>Here is some other really important stuff about fish. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-    </div>
-
-      <p>Now, for some less important stuff about fish.</p>
-    <div class="unimportant">
       <h2>Fish like to play golf</h2>
 
       <p>Little-known fact: fish like to play golf. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
@@ -38,10 +48,5 @@
       <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
     </div>
 
-    <div class="about">
-      <h3 style="font-style:normal;">About Me</h3>
-
-      <p>I'm an avid fisherman with years of experience in the water. Lorem ipsum dolor amet polaroid coloring book cray plaid XOXO tbh. Meh lyft +1 shoreditch tbh tumblr hashtag vaporware viral hammock fixie. Hoodie semiotics chia cray quinoa synth twee kale chips iPhone occupy, 90's chambray cardigan selfies. Waistcoat kitsch flannel banjo vice tofu biodiesel hashtag try-hard chambray fashion axe leggings. Chicharrones health goth beard readymade prism flexitarian biodiesel pour-over.</p>
-    </div>
   </body>
 </html>
